Question4/canary-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
  labels:
    app: canary
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
      version: v2
  template:
    metadata:
      labels:
        app: canary
        version: v2
    spec:
      containers:
      - name: canary
        # canary (v2) - return a visible version string for testing
        image: hashicorp/http-echo:0.2.3
        args:
          - "-text=canary-v2"
          - "-listen=:80"
        ports:
        - containerPort: 80
