Question4/stable-deployment.yaml

# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stable
  labels:
    app: stable
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stable
      version: v1
  template:
    metadata:
      labels:
        app: stable
        version: v1
    spec:
      containers:
      - name: stable
        # stable (v1) - return a visible version string for testing
        image: hashicorp/http-echo:0.2.3
        args:
          - "-text=stable-v1"
          - "-listen=:80"
        ports:
        - containerPort: 80
