Question4/canary-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: canary-service
  labels:
    app: canary
    version: v2
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: canary
    version: v2
