Question4/stable-service.yaml

# Service
apiVersion: v1
kind: Service
metadata:
  name: stable-service
  labels:
    app: stable
    version: v1
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: stable
    version: v1
